Introduce virtual scrolling for grid. More handling for BulkData

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <a routerLink="/product" routerLinkActive="active" class="item"><img src="assets/product.svg" /></a>
     <a routerLink="/customer" routerLinkActive="active" class="item"><img src="assets/customer.svg" /></a>
     <a routerLink="/report" routerLinkActive="active" class="item"><img src="assets/report.svg" /></a>
+    <a routerLink="/bulk-data" routerLinkActive="active" class="item"><img src="assets/data.svg" /></a>
   </div>  
   <div class="pusher content">    
     <router-outlet></router-outlet>
