--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -73,7 +73,8 @@
             (select)="onSelect($event)"
             (delete)="onDelete($event)"
             [isHeaderSticky]="false"
-            [showFooter]="true">
+            [showFooter]="true"
+            [height]="height">
       </grid>
     </div>
   </div>  
