--- a/src/app/customer/components/customer-list/customer-list.component.html
+++ b/src/app/customer/components/customer-list/customer-list.component.html
@@ -18,7 +18,8 @@
           (rowClick)="onSelect($event)"
           (select)="onSelect($event)"
           (delete)="onDelete($event)"
-          (sortChange)="onSortChange($event)">
+          (sortChange)="onSortChange($event)"
+          [height]="height">
     </grid>
   </div>  
   <mat-paginator [showFirstLastButtons]="true" [length]="total" [size]="config.size" (page)="onPageChanged($event)"></mat-paginator>
