--- a/src/app/report/components/income/income-by-invoice.component.html
+++ b/src/app/report/components/income/income-by-invoice.component.html
@@ -4,5 +4,7 @@
       [isHeaderSticky]="true"
       [isFooterSticky]="true"
       [defaultSearch]="{orderBy: 'no', isDesc: true}"
-      (sortChange)="onSortChange($event)">
+      (sortChange)="onSortChange($event)"
+      [height]="height"
+      [virtualScroll]="true">
 </grid>
