Adjust column widths

--- a/src/app/widgets/grid/grid.component.scss
+++ b/src/app/widgets/grid/grid.component.scss
@@ -4,6 +4,8 @@
     width: 100%;
 
     .mat-row {
+      height: 40px !important;
+
       &.highlighted {
         background-color: whitesmoke;
       }
