--- a/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
+++ b/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
@@ -1,3 +1,5 @@
 <grid [columns]="columns"
-      [dataSource]="products">
+      [dataSource]="products"      
+      [height]="height"
+      [virtualScroll]="true">
 </grid>
