Refinements for Retail and Report

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <a routerLink="/customer" routerLinkActive="active" class="item"><img src="assets/customer.svg" /></a>
     <a routerLink="/report" routerLinkActive="active" class="item"><img src="assets/report.svg" /></a>
     <a routerLink="/bulk-data" routerLinkActive="active" class="item"><img src="assets/data.svg" /></a>
+    <a routerLink="/user" routerLinkActive="active" class="item"><img src="assets/user.svg" /></a>
   </div>  
   <div class="pusher content">    
     <router-outlet></router-outlet>
