--- a/src/app/report/components/income/income.component.html
+++ b/src/app/report/components/income/income.component.html
@@ -1,6 +1,6 @@
 <div class="income-report">
   <toolbar>
-    <toolbar-title>Báo cáo doanh thu</toolbar-title>
+    <toolbar-title>Báo cáo doanh thu / công nợ</toolbar-title>
     <actions>
       <button mat-button (click)="flyout.show()">
         <mat-icon>filter_list</mat-icon>
