--- a/src/app/widgets/grid/grid.component.scss
+++ b/src/app/widgets/grid/grid.component.scss
@@ -20,6 +20,7 @@
       .mat-footer-cell {
         color: grey;
         font-weight: bold !important;
+        padding: 8px 0;        
       }
     }
   }
