--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,3 +21,11 @@
     }
   }
 }
+
+.login-container {
+  background: #93cede;
+  background: -moz-linear-gradient(45deg, #93cede 0%, #75bdd1 51%, #49a5bf 100%);
+  background: -webkit-linear-gradient(45deg, #93cede 0%,#75bdd1 51%,#49a5bf 100%);
+  background: linear-gradient(45deg, #93cede 0%,#75bdd1 51%,#49a5bf 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf',GradientType=1 );
+}
