--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,11 +1,14 @@
 <div class="login">
-  <mat-form-field>
-    <input matInput [(ngModel)]="username" placeholder="Tên đăng nhập" required />
-  </mat-form-field>
-  <div class="error" *ngIf="errors.has('username')">{{errors.get('username')}}</div>
-  <mat-form-field>
-    <input matInput type="password" [(ngModel)]="password" placeholder="Mật khẩu" required />
-  </mat-form-field>
-  <div class="error" *ngIf="errors.has('password')">{{errors.get('password')}}</div>
-  <button mat-flat-button color="primary" (click)="login()" style="float: right">Đăng nhập</button>
+  <div class="content fluid">
+    <div class="title">Đăng nhập</div>
+    <mat-form-field>
+      <input matInput [(ngModel)]="username" placeholder="Tên đăng nhập" required />
+    </mat-form-field>
+    <div class="error" *ngIf="errors.has('username')">{{errors.get('username')}}</div>
+    <mat-form-field>
+      <input matInput type="password" [(ngModel)]="password" placeholder="Mật khẩu" required />
+    </mat-form-field>
+    <div class="error" *ngIf="errors.has('password')">{{errors.get('password')}}</div>
+    <button mat-flat-button color="primary" (click)="login()" style="float: right">Đăng nhập</button>
+  </div>
 </div>
