--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,6 +1,20 @@
 .login {
-  position: relative;
-  top: 30%;
+  display: flex;
+  height: 100%;
   width: 400px;
   margin: auto;
+  align-items: center;
+
+  .content {
+    padding: 12px;
+    background-color: white;
+    border-radius: 8px;
+  }
+
+  .title {
+    margin-bottom: 16px;
+    font-size: 18px;
+    font-weight: 600;
+    color: grey;
+  }
 }
