--- a/src/app/widgets/product-lookup/product-lookup.component.html
+++ b/src/app/widgets/product-lookup/product-lookup.component.html
@@ -7,8 +7,8 @@
            [label]="'Nhập mã hoặc tên để tìm sản phẩm'"
            [floatLabel]="'never'"
            [direction]="direction"
-           (onKeydown)="handleKeydown($event)"
-           (onSelect)="handleSelect($event)"
+           (keydown)="onKeydown($event)"
+           (select)="onSelect($event)"
            [showOnDown]="false"
            [preventKeys]="['+', '-']"
            (show)="onShow()"
