Able to cancel an invoice

--- a/src/app/report/components/income/income-by-invoice.component.html
+++ b/src/app/report/components/income/income-by-invoice.component.html
@@ -6,5 +6,6 @@
       [defaultSearch]="{orderBy: 'no', isDesc: true}"
       (sortChange)="onSortChange($event)"
       [height]="height"
-      [virtualScroll]="true">
+      [virtualScroll]="true"
+      [rowClass]="'status'">
 </grid>
