--- a/src/app/widgets/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/widgets/confirm-dialog/confirm-dialog.component.html
@@ -2,6 +2,6 @@
   <p>{{data.msg}}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-flat-button mat-dialog-close cdkInitialFocus color="primary" (click)="close()">Hủy</button>
-  <button mat-flat-button mat-dialog-close cdkInitialFocus (click)="ok()">OK</button>
+  <button mat-flat-button mat-dialog-close cdkInitialFocus color="primary" (click)="close()">No</button>
+  <button mat-flat-button mat-dialog-close cdkInitialFocus (click)="ok()">Yes</button>
 </div>
