--- a/src/app/widgets/dropdown/dropdown.component.scss
+++ b/src/app/widgets/dropdown/dropdown.component.scss
@@ -25,6 +25,7 @@
         min-height: 40px;
         font-size: 13px;
         padding: 12px;
+        border-top: 1px solid whitesmoke !important;
       }
     }
 
