--- a/src/app/widgets/toolbar/toolbar.component.html
+++ b/src/app/widgets/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <div class="toolbar">
-  <mat-toolbar class="mat-elevation-z1">
+  <mat-toolbar class="mat-elevation-z1" [ngClass]="class">
     <div class="left">
       <div class="title">
         <ng-content select="toolbar-title"></ng-content>
