--- a/src/app/retail/components/retail/retail.component.html
+++ b/src/app/retail/components/retail/retail.component.html
@@ -1,10 +1,14 @@
 <div class="retail">
-  <toolbar>
-    <toolbar-title>Bán lẻ {{invoice.no}} - {{invoice.date | date:'dd/MM/yyyy'}}</toolbar-title>
+  <toolbar [class]="invoice.status.toLowerCase()">
+    <toolbar-title>
+        Bán lẻ {{invoice.no}} - {{invoice.date | date:'dd/MM/yyyy'}}
+      <span *ngIf="dirty">*</span>
+    </toolbar-title>
     <right>
       <div class="toolbar-search">
         <typeahead #searchInput [options]="invoices" *ngIf="searching"                 
                    (search)="onSearch($event)"
+                   [itemClass]="'status'"
                    [isLoading]="isLoading"
                    [valueMember]="'id'"
                    [displayMember]="'no'"
@@ -12,11 +16,12 @@
                    [itemTemplate]="itemTemplate"
                    (select)="onSearchSelect($event)"
                    (keydown)="onSearchKeydown($event)"
-                   (blur)="endSearch()">
+                   (blur)="endSearch()"
+                   [minChars]="1">
           <ng-template #itemTemplate let-item="item">
             <div class="search-item">
               <div class="flex">
-                <label>{{item.no}}</label>
+                <label>{{item.no}}</label>                
                 <label>{{item.date | date:'dd/MM/yyyy'}}</label>
               </div>
               <div class="flex">
@@ -49,7 +54,10 @@
         <mat-icon>print</mat-icon>
       </button>
       <button mat-button (click)="addCustomer()">
-        <mat-icon>person_add</mat-icon>        
+        <mat-icon>person_add</mat-icon>
+      </button>
+      <button mat-button (click)="cancel()" [disabled]="!canCancel">
+        <mat-icon>cancel</mat-icon>
       </button>
       <button mat-button (click)="beginSearch()">
         <mat-icon>search</mat-icon>
