--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -27,7 +27,10 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: isHeaderSticky"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row, i)" [class.highlighted]="selectedIndex == i"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index" (click)="onRowClick(row, i)"
+        [class.highlighted]="selectedIndex == i"
+        [ngClass]="!!rowClass ? row[rowClass].toLowerCase() : ''">
+    </tr>
     <ng-container *ngIf="showFooter">
       <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: isFooterSticky"></tr>
     </ng-container>
@@ -53,7 +56,10 @@
   </table>
   <cdk-virtual-scroll-viewport [itemSize]="rowHeight" class="virtual-scroll-viewport">
     <table class="mat-table">
-      <tr *cdkVirtualFor="let row of bindingDataSource" [style.height]="rowHeight + 'px'" class="mat-row">
+      <tr *cdkVirtualFor="let row of bindingDataSource"
+          [style.height]="rowHeight + 'px'"
+          class="mat-row"
+          [ngClass]="!!rowClass ? row[rowClass].toLowerCase() : ''">
         <td *ngFor="let column of columns" [style.width]="column.width || 'auto'">
           <ng-template [ngIf]="!!column.isNumber" [ngIfElse]="elseBlock">
             {{column.format(getCellData(row, column), row) | number}}
