--- a/src/site.scss
+++ b/src/site.scss
@@ -112,7 +112,7 @@
 
   .mat-row.new {
     td:first-child {
-      border-left: 4px solid yellow;
+      border-left: 4px solid #f2da3e;
     }
   }
 }
