--- a/src/app/widgets/grid/grid.component.html
+++ b/src/app/widgets/grid/grid.component.html
@@ -13,14 +13,7 @@
           [style.width]="column.width || 'auto'">
         {{column.caption}}
       </th>
-      <td mat-cell *matCellDef="let row">
-        <ng-template [ngIf]="!!column.isNumber" [ngIfElse]="elseBlock">
-          {{column.format(getCellData(row, column), row) | number}}
-        </ng-template>
-        <ng-template #elseBlock>
-          {{column.format(getCellData(row, column), row)}}
-        </ng-template>
-      </td>
+      <td mat-cell *matCellDef="let row" [innerHtml]="column.format(getCellData(row, column), row)"></td>
       <ng-container *ngIf="showFooter">
         <td mat-footer-cell *matFooterCellDef [innerHtml]="getFooterValue(column.footer)"></td>
       </ng-container>
