--- a/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
+++ b/src/app/bulk-data/components/bulk-delete/bulk-delete-product.component.html
@@ -1,5 +1,6 @@
 <grid [columns]="columns"
       [dataSource]="products"      
       [height]="height"
-      [virtualScroll]="true">
+      [virtualScroll]="true"
+      [selectable]="true">
 </grid>
