--- a/src/app/widgets/typeahead/typeahead.component.html
+++ b/src/app/widgets/typeahead/typeahead.component.html
@@ -15,7 +15,8 @@
           (show)="onShow()"
           (hide)="onHide()"          
           (onKeydown)="onKeydown($event)"
-          (select)="onSelect($event)"          
+          (onSelect)="onSelect($event)"          
           (focus)="onFocus()"
-          (blur)="onBlur()">   
+          (blur)="onBlur()"
+          [showNoResults]="showNoResults">   
 </dropdown>
