--- a/src/site.scss
+++ b/src/site.scss
@@ -116,3 +116,13 @@
     }
   }
 }
+
+.sidebar .section {
+  font-size: 16px;
+  font-weight: 600;
+  padding: 8px;
+  padding-left: 22px;
+  background-color: whitesmoke;
+  margin-left: -22px;
+  margin-right: -22px;
+}
